contents are added

--- a/index.html
+++ b/index.html
@@ -65,9 +65,7 @@
               >
             </li> -->
             <li>
-              <a  href="service.html" title="services"
-                >Services</a
-              >
+              <a href="service.html" title="services">Services</a>
             </li>
             <li>
               <a class="smoothscroll" href="#works" title="works">Works</a>
@@ -142,9 +140,8 @@
 
           <h1>
             We are a creative group <br />
-            of people who design <br />
-            influential brands and <br />
-            digital experiences.
+            of people who is helping <br />
+            people to build their dreams. <br />
           </h1>
 
           <div class="home-content__buttons">
@@ -401,29 +398,22 @@
               <div class="item-folio">
                 <div class="item-folio__thumb">
                   <a
-                    href="images/portfolio/gallery/g-shutterbug.jpg"
+                    href="images/portfolio/Group 10.png"
                     class="thumb-link"
                     title="Shutterbug"
                     data-size="1050x700"
                   >
-                    <img
-                      src="images/portfolio/lady-shutterbug.jpg"
-                      srcset="
-                        images/portfolio/lady-shutterbug.jpg    1x,
-                        images/portfolio/lady-shutterbug@2x.jpg 2x
-                      "
-                      alt=""
-                    />
+                    <img src="images/portfolio/Group 10.png" alt="" />
                   </a>
                 </div>
 
                 <div class="item-folio__text">
-                  <h3 class="item-folio__title">Shutterbug</h3>
-                  <p class="item-folio__cat">Branding</p>
+                  <h3 class="item-folio__title">Homex</h3>
+                  <p class="item-folio__cat">Ecomerce developemnt</p>
                 </div>
 
                 <a
-                  href="https://www.behance.net/"
+                  href="ananthu.online"
                   class="item-folio__project-link"
                   title="Project link"
                 >
@@ -432,8 +422,11 @@
 
                 <div class="item-folio__caption">
                   <p>
-                    Vero molestiae sed aut natus excepturi. Et tempora numquam.
-                    Temporibus iusto quo.Unde dolorem corrupti neque nisi.
+                    Homex E-commerce for Smart Home offers a diverse range of
+                    cutting-edge devices, from thermostats to security cameras.
+                    With intuitive interfaces and seamless compatibility, it
+                    empowers users to customize their smart homes for
+                    convenience and efficiency.
                   </p>
                 </div>
               </div>
@@ -444,19 +437,12 @@
               <div class="item-folio">
                 <div class="item-folio__thumb">
                   <a
-                    href="images/portfolio/gallery/g-woodcraft.jpg"
+                    href="images/portfolio/gallery/branding.png"
                     class="thumb-link"
                     title="Woodcraft"
                     data-size="1050x700"
                   >
-                    <img
-                      src="images/portfolio/woodcraft.jpg"
-                      srcset="
-                        images/portfolio/woodcraft.jpg    1x,
-                        images/portfolio/woodcraft@2x.jpg 2x
-                      "
-                      alt=""
-                    />
+                    <img src="images/portfolio/gallery/branding.png" />
                   </a>
                 </div>
 
@@ -487,19 +473,12 @@
               <div class="item-folio">
                 <div class="item-folio__thumb">
                   <a
-                    href="images/portfolio/gallery/g-beetle.jpg"
+                    href="images/portfolio/gallery/logo.png"
                     class="thumb-link"
                     title="The Beetle Car"
                     data-size="1050x700"
                   >
-                    <img
-                      src="images/portfolio/the-beetle.jpg"
-                      srcset="
-                        images/portfolio/the-beetle.jpg    1x,
-                        images/portfolio/the-beetle@2x.jpg 2x
-                      "
-                      alt=""
-                    />
+                    <img src="images/portfolio/gallery/logo.png" alt="" />
                   </a>
                 </div>
 
@@ -530,19 +509,12 @@
               <div class="item-folio">
                 <div class="item-folio__thumb">
                   <a
-                    href="images/portfolio/gallery/g-grow-green.jpg"
+                    href="images/portfolio/gallery/branding2.png"
                     class="thumb-link"
                     title="Grow Green"
                     data-size="1050x700"
                   >
-                    <img
-                      src="images/portfolio/grow-green.jpg"
-                      srcset="
-                        images/portfolio/grow-green.jpg    1x,
-                        images/portfolio/grow-green@2x.jpg 2x
-                      "
-                      alt=""
-                    />
+                    <img src="images/portfolio/gallery/branding2.png" alt="" />
                   </a>
                 </div>
 
@@ -573,19 +545,12 @@
               <div class="item-folio">
                 <div class="item-folio__thumb">
                   <a
-                    href="images/portfolio/gallery/g-guitarist.jpg"
+                    href="images/portfolio/gallery/branding3.png"
                     class="thumb-link"
                     title="Guitarist"
                     data-size="1050x700"
                   >
-                    <img
-                      src="images/portfolio/guitarist.jpg"
-                      srcset="
-                        images/portfolio/guitarist.jpg    1x,
-                        images/portfolio/guitarist@2x.jpg 2x
-                      "
-                      alt=""
-                    />
+                    <img src="images/portfolio/gallery/branding3.png" />
                   </a>
                 </div>
 
@@ -616,19 +581,12 @@
               <div class="item-folio">
                 <div class="item-folio__thumb">
                   <a
-                    href="images/portfolio/gallery/g-palmeira.jpg"
+                    href="images/portfolio/gallery/branding4.png"
                     class="thumb-link"
                     title="Palmeira"
                     data-size="1050x700"
                   >
-                    <img
-                      src="images/portfolio/palmeira.jpg"
-                      srcset="
-                        images/portfolio/palmeira.jpg    1x,
-                        images/portfolio/palmeira@2x.jpg 2x
-                      "
-                      alt=""
-                    />
+                    <img src="images/portfolio/gallery/branding4.png" />
                   </a>
                 </div>
 
@@ -714,61 +672,49 @@
         <div class="col-full">
           <div class="testimonials">
             <div class="testimonials__slide">
-              <p>
-                Qui ipsam temporibus quisquam vel. Maiores eos cumque distinctio
-                nam accusantium ipsum. Laudantium quia consequatur molestias
-                delectus culpa facere hic dolores aperiam. Accusantium quos qui
-                praesentium corpori. Excepturi nam cupiditate culpa doloremque
-                deleniti repellat.
-              </p>
+              <h3 class="h2">Our Mission</h3>
 
-              <img
-                src="images/avatars/user-01.jpg"
-                alt="Author image"
-                class="testimonials__avatar"
-              />
-              <div class="testimonials__info">
-                <span class="testimonials__name">Tim Cook</span>
-                <span class="testimonials__pos">CEO, Apple</span>
-              </div>
+              <p>
+                At DigTel, our mission is to empower businesses and individuals
+                alike by providing comprehensive IT solutions that drive success
+                and innovation. We are committed to simplifying technology,
+                making it accessible and adaptable to meet the evolving needs of
+                our clients. Through a collaborative approach and a dedication
+                to excellence, we aim to deliver tailored IT services that
+                exceed expectations, foster growth, and enable our clients to
+                thrive in an increasingly digital world. With a focus on
+                customer satisfaction and continuous improvement, we strive to
+                be the trusted partner that empowers our clients to achieve
+                their goals and realize their full potential in the digital age.
+              </p>
             </div>
 
             <div class="testimonials__slide">
+              <h3 class="h2">Our Vision</h3>
               <p>
-                Excepturi nam cupiditate culpa doloremque deleniti repellat.
-                Veniam quos repellat voluptas animi adipisci. Nisi eaque
-                consequatur. Quasi voluptas eius distinctio. Atque eos maxime.
-                Qui ipsam temporibus quisquam vel.
+                Our vision at DigTel is to pioneer a future where technology
+                becomes the cornerstone of business success and efficiency. We
+                strive to lead the IT service sector, renowned for pioneering
+                solutions that transcend limitations, foster growth, and propel
+                organizations into the digital age. We aim to be the driving
+                force behind transformation, seamlessly integrating cutting-edge
+                technologies to create a dynamic and interconnected business
+                landscape.
               </p>
-
-              <img
-                src="images/avatars/user-05.jpg"
-                alt="Author image"
-                class="testimonials__avatar"
-              />
-              <div class="testimonials__info">
-                <span class="testimonials__name">Sundar Pichai</span>
-                <span class="testimonials__pos">CEO, Google</span>
-              </div>
             </div>
 
             <div class="testimonials__slide">
+              <h3 class="h2">Why DigTel?</h3>
               <p>
-                Repellat dignissimos libero. Qui sed at corrupti expedita
-                voluptas odit. Nihil ea quia nesciunt. Ducimus aut sed ipsam.
-                Autem eaque officia cum exercitationem sunt voluptatum
-                accusamus. Quasi voluptas eius distinctio.
+                DigTel takes pride in its extensive range of IT services offered
+                at competitive prices, distinguishing us from other providers in
+                the industry. Our primary objective is to serve a diverse
+                clientele, addressing their unique needs and aspirations with
+                cutting-edge solutions and exceptional service quality. We are
+                committed to turning our clients' visions into reality by
+                leveraging innovation and providing unparalleled support every
+                step of the way.
               </p>
-
-              <img
-                src="images/avatars/user-02.jpg"
-                alt="Author image"
-                class="testimonials__avatar"
-              />
-              <div class="testimonials__info">
-                <span class="testimonials__name">Satya Nadella</span>
-                <span class="testimonials__pos">CEO, Microsoft</span>
-              </div>
             </div>
           </div>
           <!-- end testimonials -->
@@ -886,26 +832,23 @@
             <div class="cinfo">
               <h5>Where to Find Us</h5>
               <p>
-                1600 Amphitheatre Parkway<br />
-                Mountain View, CA<br />
-                94043 US
+                City Bay Business Center 
+                <br/> Office No 523| Abu
+                Hail <br/> Road Deira – Dubai
               </p>
             </div>
 
             <div class="cinfo">
               <h5>Email Us At</h5>
               <p>
-                contact@glintsite.com<br />
-                info@glintsite.com
+                 info@digtel.ae
               </p>
             </div>
 
             <div class="cinfo">
               <h5>Call Us At</h5>
               <p>
-                Phone: (+63) 555 1212<br />
-                Mobile: (+63) 555 0100<br />
-                Fax: (+63) 555 0101
+               +971 503535409<br />
               </p>
             </div>
 
