--- a/mobile-application-services.html
+++ b/mobile-application-services.html
@@ -60,9 +60,7 @@
               <a class="smoothscroll" href="#about" title="about">About</a>
             </li>
             <li>
-              <a class="smoothscroll" href="#services" title="services"
-                >Services</a
-              >
+              <a href="service.html" title="services">Services</a>
             </li>
             <li>
               <a class="smoothscroll" href="#works" title="works">Works</a>
@@ -121,6 +119,10 @@
 
     <!-- services
     ================================================== -->
+    <div class="service_hero_image_contianer">
+          <h1 class="display-2">MOBILE APPLICATIONS</h3>
+    </div>
+
     <section id="services" class="s-services">
       <div class="row section-header has-bottom-sep" data-aos="fade-up">
         <div class="col-full">
@@ -138,23 +140,9 @@
             <i class="icon-paint-brush"></i>
           </div>
           <div class="service-text">
-            <h3 class="h2">Branding Solutions</h3>
+            <h3 class="h2">Mobile Application Services </h3>
             <p>
-              Welcome to DigTel, where your unique identity meets exceptional
-              branding solutions. At DigTel, we understand that your brand is
-              more than just a logo - it's the essence of your business, the
-              story you tell, and the impression you leave. That's why we
-              specialize in tailor-made branding solutions that capture the
-              essence of who you are and what you stand for. Whether you're a
-              startup looking to make a bold entrance into the market or an
-              established business seeking a refresh, our team of creative
-              experts is here to craft a custom strategy just for you. From logo
-              design and visual identity to brand messaging and marketing
-              collateral, we offer a comprehensive suite of services designed to
-              elevate your brand and make it unforgettable. Partner with us
-              today and let's build something extraordinary together. <br/>
-             Logo Creation <br/>Company Profile creation <br/>Content Creation for Website
-            </p>
+Stay ahead of the wind with our innovative mobile operation services in the UAE. Whether you need a native app for iOS or Android, our educated inventors craft custom results acclimatized to your business requirements. From conception to launch, we guide you through every step of the app development process, icing a flawless stoner experience and robust performance. Embrace the mobile revolution and engage your followership on their bias with our slice-edge mobile app results.             </p>
           </div>
         </div>
       </div>
@@ -165,6 +153,7 @@
     <!-- works
   
 
+    ================================================== --> <!-- contact
     ================================================== -->
     <section id="contact" class="s-contact">
       <div class="overlay"></div>
@@ -271,27 +260,21 @@
             <div class="cinfo">
               <h5>Where to Find Us</h5>
               <p>
-                1600 Amphitheatre Parkway<br />
-                Mountain View, CA<br />
-                94043 US
+                City Bay Business Center
+                <br />
+                Office No 523| Abu Hail <br />
+                Road Deira – Dubai
               </p>
             </div>
 
             <div class="cinfo">
               <h5>Email Us At</h5>
-              <p>
-                contact@glintsite.com<br />
-                info@glintsite.com
-              </p>
+              <p>info@digtel.ae</p>
             </div>
 
             <div class="cinfo">
               <h5>Call Us At</h5>
-              <p>
-                Phone: (+63) 555 1212<br />
-                Mobile: (+63) 555 0100<br />
-                Fax: (+63) 555 0101
-              </p>
+              <p>+971 503535409<br /></p>
             </div>
 
             <ul class="contact-social">
