--- a/software-development.html
+++ b/software-development.html
@@ -60,9 +60,7 @@
               <a class="smoothscroll" href="#about" title="about">About</a>
             </li>
             <li>
-              <a class="smoothscroll" href="#services" title="services"
-                >Services</a
-              >
+              <a href="service.html" title="services">Services</a>
             </li>
             <li>
               <a class="smoothscroll" href="#works" title="works">Works</a>
@@ -121,7 +119,11 @@
 
     <!-- services
     ================================================== -->
-     <section id="services" class="s-services">
+    <div class="service_hero_image_contianer">
+          <h1 class="display-2">SOFTWARE DEVELOPMENT</h3>
+    </div>
+
+    <section id="services" class="s-services">
       <div class="row section-header has-bottom-sep" data-aos="fade-up">
         <div class="col-full">
           <h3 class="subhead">What We Do</h3>
@@ -133,253 +135,14 @@
       <!-- end section-header -->
 
       <div class="row services-list block-1-2 block-tab-full">
-
-
-        <div class="col-block service-item services_container_hover">
-          <div class="services_container_hover">
-            <a href="brand-solution.html">
-              <div class="service-icon">
-                <i class="icon-paint-brush"></i>
-              </div>
-              <div class="service-text">
-                <h3 class="h2">Branding Solutions</h3>
-                <p>
-                  Mold a lasting print with our comprehensive branding results
-                  in UAE. We specialize in creating unique brand individualities
-                  that capture the substance of your business. Whether you are
-                  an incipiency or a seasoned enterprise, our Company crafts
-                  compelling ensigns, memorable brand means, and cohesive brand
-                  guidelines that reverberate with your followership.
-                  <span class="read_more">read more..</span>
-                </p>
-              </div>
-            </a>
+        <div class="" data-aos="fade-up">
+          <div class="service-icon">
+            <i class="icon-paint-brush"></i>
           </div>
-        </div>
-
-        <div class="col-block service-item services_container_hover">
-          <div class="services_container_hover">
-            <a href="marketing-solution.html">
-              <div class="service-icon">
-                <i class="icon-megaphone"></i>
-              </div>
-              <div class="service-text">
-                <h3 class="h2">Marketing Solutions</h3>
-                <p>
-                  Unlock the power of your brand with our acclimatized marketing
-                  results in the UAE. From strategic planning to prosecution, we
-                  draft innovative juggernauts that reverberate with your target
-                  followership. Our company harnesses the most digital tools and
-                  traditional ways to ensure your brand stands out in a crowded
-                  request.
-                  <span class="read_more">read more..</span>
-                </p>
-              </div>
-            </a>
-          </div>
-        </div>
-
-        <div class="col-block service-item services_container_hover">
-          <div class="services_container_hover">
-            <a href="website-development.html">
-              <div class="service-icon">
-                <i class="icon-megaphone"></i>
-              </div>
-              <div class="service-text">
-                <h3 class="h2">Website Development</h3>
-                <p>
-                  Stands out in the digital geography with our professional
-                  website development in UAE. We design and develop bespoke
-                  websites that aren't only visually stunning but also optimized
-                  for performance and stoner experience. From responsive designs
-                  to e-commerce integration, our company leverages slice-edge
-                  technologies to produce websites that drive engagement and
-                  transformations.
-                  <span class="read_more">read more..</span>
-                </p>
-              </div>
-            </a>
-          </div>
-        </div>
-
-        <div class="col-block service-item services_container_hover">
-          <div class="services_container_hover">
-            <a href="ecommerce-development.html">
-              <div class="service-icon">
-                <i class="icon-megaphone"></i>
-              </div>
-              <div class="service-text">
-                <h3 class="h2">E-commerce Development</h3>
-                <p>
-                  Take your business online with our comprehensive e-commerce
-                  development in UAE. Whether you are an incipient or an
-                  established retailer, we give end-to-end results to launch and
-                  gauge your online store. From stoner-friendly interfaces to
-                  secure payment gateways, we ensure a flawless shopping
-                  experience for your guests.
-                  <span class="read_more">read more..</span>
-                </p>
-              </div>
-            </a>
-          </div>
-        </div>
-
-        <div class="col-block service-item services_container_hover">
-          <div class="services_container_hover">
-            <a href="coperate-photography.html">
-              <div class="service-icon">
-                <i class="icon-megaphone"></i>
-              </div>
-              <div class="service-text">
-                <h3 class="h2">Corporate Photography Service</h3>
-                <p>
-                  Capture the substance of your brand with our professional
-                  commercial photography service in UAE. Whether it's landing
-                  commercial events, headshots, or product shots, our professed
-                  shutterbugs bring creativity and professionalism to every
-                  shoot. We understand the significance of visual liars in a
-                  moment's competitive request and strive to deliver images that
-                  align with your brand's image.
-                  <span class="read_more">read more..</span>
-                </p>
-              </div>
-            </a>
-          </div>
-        </div>
-
-        <div class="col-block service-item services_container_hover">
-          <div class="services_container_hover">
-            <a href="mobile-application-services.html">
-              <div class="service-icon">
-                <i class="icon-megaphone"></i>
-              </div>
-              <div class="service-text">
-                <h3 class="h2">Mobile Application Services</h3>
-                <p>
-                  Stay ahead of the wind with our innovative mobile operation
-                  services in the UAE. Whether you need a native app for iOS or
-                  Android, our educated inventors craft custom results
-                  acclimatized to your business requirements. From conception to
-                  launch, we guide you through every step of the app development
-                  process, icing a flawless stoner experience and robust
-                  performance.
-                  <span class="read_more">read more..</span>
-                </p>
-              </div>
-            </a>
-          </div>
-        </div>
-
-        <div class="col-block service-item services_container_hover">
-          <div class="services_container_hover">
-            <a href="software-development.html">
-              <div class="service-icon">
-                <i class="icon-megaphone"></i>
-              </div>
-              <div class="service-text">
-                <h3 class="h2">Software Development</h3>
-                <p>
-                  Empower your business with our custom software development in
-                  UAE. Whether you need a CRM system, force operation software,
-                  or a bespoke result, our company of inventors brings moxie and
-                  creativity to every design. We work with the rearmost
-                  technologies to make scalable and secure software that
-                  streamlines your operations and drives effectiveness.
-                  <span class="read_more">read more..</span>
-                </p>
-              </div>
-            </a>
-          </div>
-        </div>
-
-        <div class="col-block service-item services_container_hover">
-          <div class="services_container_hover">
-            <a href="cyber-secutity-solution.html">
-              <div class="service-icon">
-                <i class="icon-megaphone"></i>
-              </div>
-              <div class="service-text">
-                <h3 class="h2">Cyber Security Solution</h3>
-                <p>
-                  Cover your business from cyber pitfalls with our comprehensive
-                  cyber security results in UAE. From network security to data
-                  encryption, we give a holistic approach to securing your
-                  digital means. Our company of experts conducts thorough
-                  assessments to identify vulnerabilities and apply robust
-                  security measures to alleviate pitfalls.
-                  <span class="read_more">read more..</span>
-                </p>
-              </div>
-            </a>
-          </div>
-        </div>
-
-        <div class="col-block service-item services_container_hover">
-          <div class="services_container_hover">
-            <a href="erp-solution.html">
-              <div class="service-icon">
-                <i class="icon-megaphone"></i>
-              </div>
-              <div class="service-text">
-                <h3 class="h2">ERP Solutions</h3>
-                <p>
-                  Streamline your business operations with our integrated ERP
-                  results in UAE. Whether you are a small business or a large
-                  enterprise, our scalable ERP systems automate processes,
-                  improve effectiveness, and enhance decision- timber. From
-                  finance and HR to supply chain operations, we conform results
-                  to meet your specific requirements.
-                  <span class="read_more">read more..</span>
-                </p>
-              </div>
-            </a>
-          </div>
-        </div>
-
-        <div class="col-block service-item services_container_hover">
-          <div class="services_container_hover">
-            <a href="corporate-training.html">
-              <div class="service-icon">
-                <i class="icon-megaphone"></i>
-              </div>
-              <div class="service-text">
-                <h3 class="h2">Corporate Training</h3>
-                <p>
-                  Invest in your pool with our dynamic commercial training in
-                  the UAE. We offer a wide range of training programs
-                  acclimatized to your assiduity and business objectives. From
-                  leadership development to specialized chops training, our
-                  educated preceptors deliver engaging and interactive sessions
-                  that empower your company to excel. Whether it's onsite shops
-                  or online courses, we give flexible training results to
-                  accommodate your requirements.
-                  <span class="read_more">read more..</span>
-                </p>
-              </div>
-            </a>
-          </div>
-        </div>
-
-        <div class="col-block service-item services_container_hover">
-          <div class="services_container_hover">
-            <a href="corporate-training.html">
-              <div class="service-icon">
-                <i class="icon-megaphone"></i>
-              </div>
-              <div class="service-text">
-                <h3 class="h2">Cloud solutions</h3>
-                <p>
-                  Embrace the future of business with our innovative cloud
-                  storage solution in UAE. Whether you are looking to resettle
-                  to the cloud or optimize your being structure, we offer
-                  acclimatized results to meet your requirements. From public
-                  and private cloud deployments to cold-blooded results, our
-                  experts design and apply robust infrastructures that gauge
-                  your business.
-                  <span class="read_more">read more..</span>
-                </p>
-              </div>
-            </a>
+          <div class="service-text">
+            <h3 class="h2">Software Development </h3>
+            <p>
+Empower your business with our custom software development in UAE. Whether you need a CRM system, force operation software, or a bespoke result, our company of inventors brings moxie and creativity to every design. We work with the rearmost technologies to make scalable and secure software that streamlines your operations and drives effectiveness. Let us turn your ideas into reality with our acclimatized software development results.             </p>
           </div>
         </div>
       </div>
@@ -390,6 +153,7 @@
     <!-- works
   
 
+    ================================================== --> <!-- contact
     ================================================== -->
     <section id="contact" class="s-contact">
       <div class="overlay"></div>
@@ -496,27 +260,21 @@
             <div class="cinfo">
               <h5>Where to Find Us</h5>
               <p>
-                1600 Amphitheatre Parkway<br />
-                Mountain View, CA<br />
-                94043 US
+                City Bay Business Center
+                <br />
+                Office No 523| Abu Hail <br />
+                Road Deira – Dubai
               </p>
             </div>
 
             <div class="cinfo">
               <h5>Email Us At</h5>
-              <p>
-                contact@glintsite.com<br />
-                info@glintsite.com
-              </p>
+              <p>info@digtel.ae</p>
             </div>
 
             <div class="cinfo">
               <h5>Call Us At</h5>
-              <p>
-                Phone: (+63) 555 1212<br />
-                Mobile: (+63) 555 0100<br />
-                Fax: (+63) 555 0101
-              </p>
+              <p>+971 503535409<br /></p>
             </div>
 
             <ul class="contact-social">
