--- a/coperate-photography.html
+++ b/coperate-photography.html
@@ -153,8 +153,7 @@ Capture the substance of your brand with our professional commercial photography
     <!-- works
   
 
-    ================================================== --> <!-- contact
-    ================================================== -->
+      <!-- ====CONTACT============================================== -->
     <section id="contact" class="s-contact">
       <div class="overlay"></div>
       <div class="contact__line"></div>
@@ -172,19 +171,13 @@ Capture the substance of your brand with our professional commercial photography
         <div class="contact-primary">
           <h3 class="h6">Send Us A Message</h3>
 
-          <form
-            name="contactForm"
-            id="contactForm"
-            method="post"
-            action=""
-            novalidate="novalidate"
-          >
+          <form onsubmit="SendMail(event)">
             <fieldset>
               <div class="form-field">
                 <input
-                  name="contactName"
+                  name="fullName"
                   type="text"
-                  id="contactName"
+                  id="fullName"
                   placeholder="Your Name"
                   value=""
                   minlength="2"
@@ -195,9 +188,9 @@ Capture the substance of your brand with our professional commercial photography
               </div>
               <div class="form-field">
                 <input
-                  name="contactEmail"
+                  name="email_id"
                   type="email"
-                  id="contactEmail"
+                  id="email_id"
                   placeholder="Your Email"
                   value=""
                   required=""
@@ -206,19 +199,9 @@ Capture the substance of your brand with our professional commercial photography
                 />
               </div>
               <div class="form-field">
-                <input
-                  name="contactSubject"
-                  type="text"
-                  id="contactSubject"
-                  placeholder="Subject"
-                  value=""
-                  class="full-width"
-                />
-              </div>
-              <div class="form-field">
                 <textarea
-                  name="contactMessage"
-                  id="contactMessage"
+                  name="message"
+                  id="message"
                   placeholder="Your Message"
                   rows="10"
                   cols="50"
@@ -241,15 +224,12 @@ Capture the substance of your brand with our professional commercial photography
             </fieldset>
           </form>
 
-          <!-- contact-warning -->
-          <div class="message-warning">
-            Something went wrong. Please try again.
-          </div>
-
-          <!-- contact-success -->
-          <div class="message-success">
-            Your message was sent, thank you!<br />
-          </div>
+          <!-- <div>
+            <input name="contactName" type="text" class="full-width" id="fullName" />
+            <input name="email" type="email" id="email_id" class="full-width" />
+            <textarea placeholder="message" id="message"></textarea>
+            <button class="full-width btn--primary" onclick="SendMail()">Submit</button>
+          </div> -->
         </div>
         <!-- end contact-primary -->
 
@@ -278,27 +258,22 @@ Capture the substance of your brand with our professional commercial photography
             </div>
 
             <ul class="contact-social">
-              <li>
-                <a href="#"
+                 <li>
+                <a href="https://www.facebook.com/profile.php?id=61555138014462"
                   ><i class="fa fa-facebook" aria-hidden="true"></i
                 ></a>
               </li>
+      
               <li>
-                <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-              </li>
-              <li>
-                <a href="#"
+                <a href="https://www.instagram.com/digtelworld/"
                   ><i class="fa fa-instagram" aria-hidden="true"></i
                 ></a>
               </li>
               <li>
-                <a href="#"><i class="fa fa-behance" aria-hidden="true"></i></a>
-              </li>
-              <li>
-                <a href="#"
-                  ><i class="fa fa-dribbble" aria-hidden="true"></i
-                ></a>
-              </li>
+              <a href="https://www.linkedin.com/company/digtel/" target="_blank">
+                  <i class="fa fa-linkedin" aria-hidden="true"></i>
+              </a>
+               </li>
             </ul>
             <!-- end contact-social -->
           </div>
@@ -322,29 +297,35 @@ Capture the substance of your brand with our professional commercial photography
             class="footer-logo"
           />
 
-          Proin eget tortor risus. Mauris blandit aliquet elit, eget tincidunt
-          nibh pulvinar a. Praesent sapien massa, convallis a pellentesque nec,
-          egestas non nisi. Mauris blandit aliquet elit, eget tincidunt nibh
-          pulvinar a. Nulla porttitor accumsan tincidunt. Nulla porttitor
-          accumsan tincidunt. Quaerat voluptas autem necessitatibus vitae aut.
+          DigTel is your premier destination for cutting-edge digital solutions.
+          Our mission is to empower businesses with innovative technology and
+          strategic insights to succeed in the digital landscape. With expertise
+          in web development, mobile app solutions, digital marketing, and IT
+          consulting, we offer comprehensive services tailored to your needs.
+          Partner with DigTel and take your business to new heights in the
+          digital world.
         </div>
 
         <div class="col-six tab-full right footer-subscribe">
           <h4>Get Notified</h4>
           <p>
-            Quia quo qui sed odit. Quaerat voluptas autem necessitatibus vitae
-            aut non alias sed quia. Ut itaque enim optio ut excepturi deserunt
-            iusto porro.
+            Stay updated with the latest news, offers, and insights from DigTel.
+            Subscribe to our newsletter!
           </p>
 
           <div class="subscribe-form">
-            <form id="mc-form" class="group" novalidate="true">
+            <form
+              id="mc-form"
+              class="group"
+              novalidate="true"
+              onsubmit="Subscribe(event)"
+            >
               <input
                 type="email"
                 value=""
                 name="EMAIL"
                 class="email"
-                id="mc-email"
+                id="email"
                 placeholder="Email Address"
                 required=""
               />
@@ -455,5 +436,15 @@ Capture the substance of your brand with our professional commercial photography
     <script src="js/jquery-3.2.1.min.js"></script>
     <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
+    <script src="sendmail.js"></script>
+    <script
+      type="text/javascript"
+      src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"
+    ></script>
+
+    <script type="text/javascript">
+      emailjs.init("HmggpMquoxHDt-RHE");
+    </script>
+    <script></script>
   </body>
 </html>
