--- a/cyber-secutity-solution.html
+++ b/cyber-secutity-solution.html
@@ -150,10 +150,7 @@ Cover your business from cyber pitfalls with our comprehensive cyber security re
     </section>
     <!-- end s-services -->
 
-    <!-- works
-  
-
-      <!-- ====CONTACT============================================== -->
+    <!--====CONTACT============================================== -->
     <section id="contact" class="s-contact">
       <div class="overlay"></div>
       <div class="contact__line"></div>
