--- a/erp-solution.html
+++ b/erp-solution.html
@@ -140,7 +140,7 @@
             <i class="icon-paint-brush"></i>
           </div>
           <div class="service-text">
-            <h3 class="h2">Branding Solutions</h3>
+            <h3 class="h2">Erp Solutions</h3>
             <p>
 Streamline your business operations with our integrated ERP results in UAE. Whether you are a small business or a large enterprise, our scalable ERP systems automate processes, improve effectiveness, and enhance decision- timber. From finance and HR to supply chain operations, we conform results to meet your specific requirements. unleash new situations of productivity and drive growth with our comprehensive ERP results.             </p>
           </div>
