--- a/service.html
+++ b/service.html
@@ -362,7 +362,7 @@
 
         <div class="col-block service-item services_container_hover">
           <div class="services_container_hover">
-            <a href="corporate-training.html">
+            <a href="cloud-solution.html">
               <div class="service-icon">
                 <i class="icon-megaphone"></i>
               </div>
