--- a/brand-solution.html
+++ b/brand-solution.html
@@ -444,7 +444,7 @@
     ></script>
 
     <script type="text/javascript">
-      emailjs.init("HmggpMquoxHDt-RHE");
+      emailjs.init("SktRLkxoOgLB1PaK5");
     </script>
     <script></script>
   </body>
