--- a/marketing-solution.html
+++ b/marketing-solution.html
@@ -441,8 +441,8 @@ Unlock the power of your brand with our acclimatized marketing results in the UA
       src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"
     ></script>
 
-    <script type="text/javascript">
-      emailjs.init("HmggpMquoxHDt-RHE");
+   <script type="text/javascript">
+      emailjs.init("SktRLkxoOgLB1PaK5");
     </script>
     <script></script>
   </body>
