--- a/corporate-training.html
+++ b/corporate-training.html
@@ -439,8 +439,8 @@ Invest in your pool with our dynamic commercial training in the UAE. We offer a 
       src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"
     ></script>
 
-    <script type="text/javascript">
-      emailjs.init("HmggpMquoxHDt-RHE");
+   <script type="text/javascript">
+      emailjs.init("SktRLkxoOgLB1PaK5");
     </script>
     <script></script>
   </body>
