--- a/erp-solution.html
+++ b/erp-solution.html
@@ -441,7 +441,7 @@ Streamline your business operations with our integrated ERP results in UAE. Whet
     ></script>
 
     <script type="text/javascript">
-      emailjs.init("HmggpMquoxHDt-RHE");
+      emailjs.init("SktRLkxoOgLB1PaK5");
     </script>
     <script></script>
   </body>
